add comments sorting and semi-functioning likes
