# server/openapi.yaml
@@ -124,7 +124,33 @@ paths:
         "500":
           description: Error deleting comment
 
-    
+
+  /comments/{id}/likes:
+    post:
+      summary: Update likes count
+      tags: [Post]
+
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID of the comment to increment likes
+          schema:
+            type: integer
+
+      responses:
+        "201":
+          description: Comment likes successfully incremented
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Comment"
+        "400":
+          description: Invalid input
+        "404":
+          description: Comment not found
+        "500":
+          description: Error incrementing comment likes
 
 
 
